--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.2.1",
     "react-native-maps": "0.27.1",
+    "react-native-ratings": "^7.4.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
